--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
       data-length="6"
       placeholder="write 6 symbols"
     />
+
+    <section class="last">
+      <input
+        type="range"
+        min="10"
+        max="40"
+        step="1"
+        class="font-size-control"
+      />
+      <p class="text">Абракадабра!</p>
+    </section>
     <script type="module" src="./index.js"></script>
   </body>
 </html>
